Feat: Clicked on keys will change color and update tallies on bottom  and declare a winner when threshold is wet for each

--- a/static/style.css
+++ b/static/style.css
@@ -68,6 +68,12 @@ body {
 
 } */
 
+.outcome {
+    opacity: 0;
+    text-align: center;
+    padding: 5px auto;
+    font-size: x-large;
+}
 
 
 .marker-box {
