--- a/views/index.html
+++ b/views/index.html
@@ -107,12 +107,22 @@
                         <div id="true" class="oppenc">0</div>
                     </label>
 
+                    <label for="false">
+                        Undecided
+                        <div id="undecided" class="oppenc">13</div>
+                    </label>
 
                     <label for="false">
                         False
                         <div id="false" class="oppenc">0</div>
                     </label>
                 </div>
+
+                <label class="outcome" for="false">
+                    No clear Winner
+                    <div id="winner" class="winner">0</div>
+                </label>
+
             </div>
 
            
