--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,25 @@
     --text-color: #0E53A2;
     --background-color: #FFFFFF;
     --card-background: #F2F2F7;
+
+    --true-certainly-text-color: #ffffff;
+    --true-certainly-bg-color: #1565C0;
+
+    --true-likely-text-color: #02121C;
+    --true-likely-bg-color: #42A5F5;
+
+    --true-leans-text-color: #044268;
+    --true-leans-bg-color: #BBDEFB;
+
+    --false-certainly-text-color: #ffffff;
+    --false-certainly-bg-color: #d12525;
+
+    --false-likely-text-color: #000000;
+    --false-likely-bg-color: #ee6c6a;
+
+    --false-leans-text-color: #682A23;
+    --false-leans-bg-color: #FFCDD2;
+ 
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -21,11 +40,15 @@
     color: var(--primary-color);
 }
 
-body {
+html {
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
     line-height: 1.6;
     color: var(--text-color);
     background-color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    width: 100dvw;
 }
 
 .container {
@@ -39,9 +62,166 @@ body {
     gap: 25px;
 }
 
+.container:first-child > div {
+    display: flex;
+    justify-content: end;
+}
+
+#clear-selections-btn {
+    width: 200px;
+    border: #767676 2px solid;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
+
+#clear-selections-btn:hover {
+   transform:translateY( -2px)
+}
+
+#clear-selections-btn:hover:disabled {
+    transform:translateY( 0px)
+ }
+
+#clear-selections-btn:active {
+    transform:translateY( 0px)
+}
+
+#clear-selections-btn:disabled {
+    opacity: .5;
+    width: 200px;
+    border: transparent 2px solid;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
+
+.true-option-row, .candidate-inputs {
+    display: flex;
+    justify-content: space-around;
+    flex: 1;
+
+}
+
+.true, .false {
+    border-radius: 10px;
+    padding: 5px 10px;
+    border: 1px black solid;
+}
+
+.true-option-row .certainly {
+    background-color: var(--true-certainly-bg-color);
+    color: var(--true-certainly-text-color);
+}
+
+.true-option-row .likely {
+    background-color: var(--true-likely-bg-color);
+    color: var(--true-likely-text-color);
+}
+
+.true-option-row .leans {
+    background-color: var(--true-leans-bg-color);
+    color: var(--true-leans-text-color);
+}
+
+.false-option-row {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.false-option-row .certainly {
+    background-color: var(--false-certainly-bg-color);
+    color: var(--false-certainly-text-color);
+}
+
+.false-option-row .likely {
+    background-color: var(--false-likely-bg-color);
+    color: var(--false-likely-text-color);
+}
+
+.false-option-row .leans {
+    background-color: var(--false-leans-bg-color);
+    color: var(--false-leans-text-color);
+}
+
+@keyframes grow {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.27);
+    }
+    100% {
+        transform: scale(1.25);
+    }
+}
+
+
+@keyframes shrink {
+    0% {
+        transform: scale(1.25);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+hr {
+    margin: 10px 0px;
+}
+
+.candidate-inputs label {
+    display: flex;
+    flex-direction: column;
+    color: black;
+    font-weight: bolder;
+}
+
+#trueCandidate {
+    font-size: larger;
+    color: #ffffff;
+    background-color:var(--true-certainly-bg-color);
+    padding: 5px 10px;
+}
+
+
+#falseCandidate {
+    font-size: larger;
+    color: #ffffff;
+    background-color:var(--false-certainly-bg-color);
+    padding: 5px 10px;
+}
+
+.candidateInput {
+    text-align: center;
+}
+
+.true-option-row .likely {
+    background-color: var(--true-likely-bg-color);
+}
+
+.true-option-row .leans {
+    background-color: var(--true-leans-bg-color);
+}
+
+.false-option-row .certainly {
+    background-color: var(--false-certainly-bg-color);
+}
+
+.false-option-row .likely {
+    background-color: var(--false-likely-bg-color);
+}
+
+.false-option-row .leans {
+    background-color: var(--false-leans-bg-color);
+}
+
+
+
 .row { 
     min-width: 100%;
-    min-height: 4rem;
+    padding: 5px 15px;
     gap: 15px;
     display: flex;
     align-self: center;
@@ -57,16 +237,6 @@ body {
 
 }
 
-/* .marker-box::after {
-    content: "";
-    font-style: italic;
-    font-size: small;
-    background-color: rgba(255, 255, 255, 0.596);
-    color: rgba(0, 0, 0, 0.415);
-    padding: 2px 8px; 
-    border-radius: 5px;
-
-} */
 
 .outcome {
     opacity: 0;
@@ -106,7 +276,11 @@ body {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.435);
     bottom: 0;
     left: 0; 
     right: 0;
