--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,42 @@
             <p>Create and Track simple data for your life!</p>
         </section>
 
-        
+       
+
+        <section id="info">
+            <h1>Options:</h1>
+            <div class="container">
+                <div class="true-option-row">
+                    <div class="true certainly">Certainly True</div>
+                    <div class="true likely">Likely True</div>
+                    <div class="true leans">Leans True</div>
+                </div>
+               
+                <div class="false-option-row">
+                   
+                    <div class="false certainly">Certainly False</div>
+                    
+                    <div class="false likely">Likely False</div>
+                    <div class="false leans">Leans False</div>
+                </div> 
+               
+            </div>
+ <hr>
+        </section>
+       
+        <section class="candidate-inputs">
+            <label for="trueCandidate">
+                Encumbent Candidate
+                <input id="trueCandidate" class="candidateInput" type="text" value="Kamala Harris">
+
+            </label>
+            <p>VS</p>
+
+            <label for="falseCandidate">
+                Challenging Candidate
+                <input id="falseCandidate" class="candidateInput" type="text" value="Donald Trump">
+            </label>
+        </section>
 
         <section>
             <div class="container">
@@ -103,9 +138,12 @@
                     <button class="marker-box" data-shade="0">Undecided</button>
                 </div>
 
+                <div id="test"><button id="clear-selections-btn" disabled>clear selections</button></div>
+
+
                  <div class="row"> 
                     <label for="true">
-                        True
+                        <p>True</p>
                         <div id="true" class="oppenc">0</div>
                     </label>
 
@@ -119,7 +157,7 @@
                         <div id="false" class="oppenc">0</div>
                     </label>
                 </div>
-
+                
                 <label class="outcome" for="false">
                     No clear Winner
                     <div id="winner" class="winner">0</div>
