--- a/views/index.html
+++ b/views/index.html
@@ -141,7 +141,7 @@
                 <div id="test"><button id="clear-selections-btn" disabled>clear selections</button></div>
 
 
-                 <div class="row"> 
+                 <div class="row tally"> 
                     <label for="true">
                         <p>True</p>
                         <div id="true" class="oppenc">0</div>
