--- a/views/historicalError.html
+++ b/views/historicalError.html
@@ -18,9 +18,9 @@
             
     <main>
         <section id="home" class="hero">
-            <h1>Oooops.</h1>
+            <h1>Oh no, an issue Occurred!</h1>
               
-              <p>Seems your year may be a bit off..... try a year between 1860 and our current election</p>
+              <p>{{ .Error }}</p>
             <p>Press the arrow above to go back.</p>
         </section>
 
