testing with no templating variables

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,9 @@
     
   </head>
 <body>
-    <header>
+
+    <p>testing</p>
+    <!-- <header>
         <nav>
             <div><button class="dialogBtn">i</button></div>
         </nav>
@@ -44,7 +46,7 @@
         {{ template "Tally" }}
         <div id="test"><button id="clear-selections-btn" disabled>clear selections</button></div>
         <p>2024 Presidential Keys Coding Project.</p>
-    </footer>
+    </footer> -->
 
     <script type="text/javascript" src="/static/script.js"></script>
 </body>
